@@ -124,9 +124,14 @@ void CButtonSettingControl::OnClick()
   CStdStringW heading;
   if (((CSettingString *)m_pSetting)->m_iHeadingString > 0)
     heading = g_localizeStrings.Get(((CSettingString *)m_pSetting)->m_iHeadingString);
-  if (m_pSetting->GetControlType() == BUTTON_CONTROL_INPUT || m_pSetting->GetControlType() == BUTTON_CONTROL_HIDDEN_INPUT)
+  if (m_pSetting->GetControlType() == BUTTON_CONTROL_INPUT)
   {
     if (!CGUIDialogKeyboard::ShowAndGetInput(keyboardInput, heading, ((CSettingString *)m_pSetting)->m_bAllowEmpty))
+      return ;
+  }
+  if (m_pSetting->GetControlType() == BUTTON_CONTROL_HIDDEN_INPUT)
+  {
+    if (!CGUIDialogKeyboard::ShowAndGetNewPassword(keyboardInput, heading, ((CSettingString *)m_pSetting)->m_bAllowEmpty))
       return ;
   }
   if (m_pSetting->GetControlType() == BUTTON_CONTROL_IP_INPUT)
